[project]
name = "toolsy"
description = ''
requires-python = ">=3.9"
authors = [
    { name = "Hui Zhou", email = "1051987201@qq.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
]
dynamic = ["version"]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"